--- a/app/mardownExamples/form/h31.md
+++ b/app/mardownExamples/form/h31.md
@@ -1,3 +1,32 @@
 ```javascript
+export function SwitchFunctionFive() {
+  const { colorMode, toggleColorMode } = useColorMode();
 
+  return (
+    <SingleExample bg="background">
+      <Flex align="center" justify="center" w="100%">
+        <VStack align="center" justify="center">
+          <HStack w="100%" spacing={4}>
+            <BsFillSunFill />
+            <Switch
+              id="dark-mode-toggle"
+              isChecked={colorMode === "dark"}
+              onChange={toggleColorMode}
+            />
+            <BsFillMoonStarsFill />
+          </HStack>
+          <Box
+            mt={4}
+            p={4}
+            rounded="md"
+            bg={colorMode === "dark" ? "gray.700" : "gray.200"}
+            color={colorMode === "dark" ? "white" : "black"}
+          >
+            {colorMode === "dark" ? "Dark Mode" : "Light Mode"}
+          </Box>
+        </VStack>
+      </Flex>
+    </SingleExample>
+  );
+}
 ```
