--- a/app/mardownExamples/form/h32.md
+++ b/app/mardownExamples/form/h32.md
@@ -1,3 +1,36 @@
 ```javascript
+export function SwitchFunctionSix() {
+  const [selectedLanguage, setSelectedLanguage] = useState("en");
 
+  const handleLanguageChange = () => {
+    setSelectedLanguage(selectedLanguage === "en" ? "fr" : "en");
+  };
+
+  const getContentByLanguage = () => {
+    if (selectedLanguage === "en") {
+      return "Welcome to our wonderful place on the web, where dreams come true and today is always just the beginning!";
+    } else if (selectedLanguage === "fr") {
+      return "Bienvenue dans notre merveilleux espace en ligne, où les rêves se réalisent et où aujourd'hui est toujours le début!";
+    }
+  };
+
+  return (
+    <SingleExample bg="background">
+      <VStack spacing={4}>
+        <HStack spacing={5}>
+          <Text fontSize="3xl">🇬🇧</Text>
+          <Switch
+            id="language-selector"
+            isChecked={selectedLanguage === "fr"}
+            onChange={handleLanguageChange}
+          />
+          <Text fontSize="3xl">🇫🇷</Text>
+        </HStack>
+        <Flex bg="sidebarBackground" p={3}>
+          <h3>{getContentByLanguage()}</h3>
+        </Flex>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
