finished textarea and therefore all of form. HOORAY

--- a/app/mardownExamples/form/45.md
+++ b/app/mardownExamples/form/45.md
@@ -1,3 +1,35 @@
 ```javascript
+export function TextareaFunctionThree() {
+  const [resize, setResize] = useState<"horizontal" | "vertical" | "none">(
+    "horizontal"
+  );
 
+  const handleResizeChange = (e: React.ChangeEvent<HTMLSelectElement>) => {
+    setResize(e.target.value as "horizontal" | "vertical" | "none");
+  };
+  return (
+    <SingleExample bg="background">
+      {" "}
+      <VStack w="100%">
+        <HStack w="100%" spacing={4}>
+          <Text>Resize:</Text>
+          <Select
+            value={resize}
+            onChange={handleResizeChange}
+          >
+            <option value="horizontal">Horizontal</option>
+            <option value="vertical">Vertical</option>
+            <option value="none">None</option>
+          </Select>
+        </HStack>
+
+        <Textarea
+          placeholder="Enter your text here"
+          value="This is a longer initial value that exceeds the initial dimensions of the Textarea."
+          resize={resize}
+        />
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
