--- a/app/mardownExamples/form/46.md
+++ b/app/mardownExamples/form/46.md
@@ -1,3 +1,23 @@
 ```javascript
+export function TextareaFunctionTwo() {
+  const [value, setValue] = useState("");
 
+  const handleInputChange = (e: React.ChangeEvent<HTMLTextAreaElement>) => {
+    const inputValue = e.target.value;
+    setValue(inputValue);
+  };
+
+  return (
+    <SingleExample bg="background">
+      <VStack align="flex-start" w="100%">
+        <Text mb="8px">Controlled Text Area: {value}</Text>
+        <Textarea
+          value={value}
+          onChange={handleInputChange}
+          placeholder="Value is controlled by state."
+        />
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
