--- a/app/mardownExamples/form/h35.md
+++ b/app/mardownExamples/form/h35.md
@@ -1,3 +1,33 @@
 ```javascript
+const MAX_CHARACTERS = 100;
 
+export function TextareaFunctionSeven() {
+  const [value, setValue] = useState("");
+  const handleChange = (e: React.ChangeEvent<HTMLTextAreaElement>) => {
+    const inputValue = e.target.value;
+    if (inputValue.length <= MAX_CHARACTERS) {
+      setValue(inputValue);
+    }
+  };
+
+  return (
+    <SingleExample bg="background">
+      <>
+        <Textarea
+          value={value}
+          onChange={handleChange}
+          placeholder="Type here..."
+          sx={textareaStyles}
+          resize="none"
+        />
+        <Text
+          mt={2}
+          color={value.length > MAX_CHARACTERS ? "red.500" : "gray.500"}
+        >
+          {value.length}/{MAX_CHARACTERS} characters used
+        </Text>
+      </>
+    </SingleExample>
+  );
+}
 ```
