--- a/app/mardownExamples/form/h36.md
+++ b/app/mardownExamples/form/h36.md
@@ -1,3 +1,57 @@
 ```javascript
+export function TextareaFunctionEight() {
+  const [tags, setTags] = useState<string[]>([
+    "One Tag",
+    "Two Tag",
+    "No Red Tag",
+    "No Blue Tag",
+  ]);
+  const [inputValue, setInputValue] = useState("");
 
+  const handleInputChange = (e: React.ChangeEvent<HTMLTextAreaElement>) => {
+    setInputValue(e.target.value);
+  };
+
+  const handleInputKeyDown = (e: React.KeyboardEvent<HTMLTextAreaElement>) => {
+    if (e.key === "Enter" && inputValue.trim() !== "") {
+      setTags([...tags, inputValue.trim()]);
+      setInputValue("");
+    }
+  };
+
+  const handleTagRemove = (tag: string) => {
+    const updatedTags = tags.filter((t) => t !== tag);
+    setTags(updatedTags);
+  };
+
+  return (
+    <SingleExample>
+      <VStack w="100%" spacing={4}>
+        <Textarea
+          value={inputValue}
+          onChange={handleInputChange}
+          onKeyDown={handleInputKeyDown}
+          placeholder="Enter tags (Press Enter to add)"
+          sx={textareaStyles}
+          resize="none"
+        />
+        <Flex mt={2} flexWrap="wrap">
+          {tags.map((tag) => (
+            <Tag
+              key={tag}
+              borderRadius="full"
+              variant="solid"
+              colorScheme="teal"
+              mr={2}
+              mb={2}
+            >
+              <TagLabel>{tag}</TagLabel>
+              <TagCloseButton onClick={() => handleTagRemove(tag)} />
+            </Tag>
+          ))}
+        </Flex>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
