--- a/app/mardownExamples/form/h34.md
+++ b/app/mardownExamples/form/h34.md
@@ -1,3 +1,30 @@
 ```javascript
+export function TextareaFunctionSix() {
+  const textareaRef = useRef < HTMLTextAreaElement > null;
+  const [value, setValue] = useState("");
 
+  const handleChange = (e: React.ChangeEvent<HTMLTextAreaElement>) => {
+    setValue(e.target.value);
+    if (textareaRef.current) {
+      textareaRef.current.style.height = "auto";
+      textareaRef.current.style.height = `${textareaRef.current.scrollHeight}px`;
+    }
+  };
+
+  return (
+    <SingleExample bg="background">
+      {" "}
+      Function Logic
+      <Textarea
+        ref={textareaRef}
+        value={value}
+        onChange={handleChange}
+        placeholder="Type to see the textarea expand..."
+        minHeight="100px"
+        resize="none"
+        sx={textareaStyles}
+      />
+    </SingleExample>
+  );
+}
 ```
