--- a/app/mardownExamples/layout/h04.md
+++ b/app/mardownExamples/layout/h04.md
@@ -1,3 +1,86 @@
 ```javascript
+export function CenterFunctionFour() {
+  const [isMoving, setIsMoving] = useState(false);
 
+  const handleButtonClick = () => {
+    setIsMoving(!isMoving);
+  };
+
+  return (
+    <Center position="relative" height="175px">
+      <Square
+        size="75px"
+        bg="accent_1"
+        position="absolute"
+        top="50%"
+        left="50%"
+        transform={
+          isMoving
+            ? "translate(-50%, -50%) translate(-40px, -40px) rotate(-90deg)"
+            : "translate(-50%, -50%)"
+        }
+        transition="transform 0.8s ease"
+      />
+      <Square
+        size="75px"
+        bg="accent_2"
+        position="absolute"
+        top="50%"
+        left="50%"
+        transform={
+          isMoving
+            ? "translate(-50%, -50%) translate(40px, -40px) rotate(-90deg)"
+            : "translate(-50%, -50%)"
+        }
+        transition="transform 0.6s ease"
+      />
+      <Square
+        size="75px"
+        bg="accent_1"
+        position="absolute"
+        top="50%"
+        left="50%"
+        transform={
+          isMoving
+            ? "translate(-50%, -50%) translate(40px, 40px) rotate(90deg)"
+            : "translate(-50%, -50%)"
+        }
+        transition="transform 0.4s ease"
+        _hover={{ cursor: "pointer" }}
+      />
+      <Square
+        size="75px"
+        bg="accent_2"
+        position="absolute"
+        top="50%"
+        left="50%"
+        transform={
+          isMoving
+            ? "translate(-50%, -50%) translate(-40px, 40px) rotate(-90deg)"
+            : "translate(-50%, -50%)"
+        }
+        transition="transform 0.3s ease"
+      />
+      <Button
+        size="sm"
+        bg={isMoving ? "background" : "tipBackground"}
+        color={isMoving ? "tipBackground" : "background"}
+        borderRadius="md"
+        position="absolute"
+        top="50%"
+        left="50%"
+        transform="translate(-50%, -50%)"
+        zIndex={2}
+        onClick={handleButtonClick}
+        _hover={{
+          cursor: "pointer",
+          bg: isMoving ? "tipBackground" : "background",
+          color: isMoving ? "background" : "tipBackground",
+        }}
+      >
+        {isMoving ? "Close" : "Open"}
+      </Button>
+    </Center>
+  );
+}
 ```
