--- a/app/mardownExamples/layout/h05.md
+++ b/app/mardownExamples/layout/h05.md
@@ -1,3 +1,46 @@
 ```javascript
+export function CenterFunctionSix() {
+  const spinAnimation = keyframes`
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  `;
 
+  const dotAnimation = (delay: number) => keyframes`
+    0%, 20% { opacity: 0; }
+    ${20 + delay}%, 100% { opacity: 1; }
+  `;
+
+  return (
+    <SingleExample bg="background" position="relative">
+      <HStack spacing={1}>
+        <Circle
+          size="fit-content"
+          color="white"
+          position="relative"
+          animation={`${spinAnimation} 3s linear infinite`}
+        >
+          <GiFlowerTwirl size={27} color="cyan" />
+        </Circle>
+        <Heading as="span" size="md" color="accent_1">
+          Loading
+          <Box as="span" animation={`${dotAnimation(0)} 1.25s linear infinite`}>
+            .
+          </Box>
+          <Box
+            as="span"
+            animation={`${dotAnimation(33)} 1.25s linear infinite`}
+          >
+            .
+          </Box>
+          <Box
+            as="span"
+            animation={`${dotAnimation(66)} 1.25s linear infinite`}
+          >
+            .
+          </Box>
+        </Heading>
+      </HStack>
+    </SingleExample>
+  );
+}
 ```
