--- a/app/mardownExamples/layout/h06.md
+++ b/app/mardownExamples/layout/h06.md
@@ -1,3 +1,38 @@
 ```javascript
+export function CenterFunctionSeven() {
+  const [isHovered, setIsHovered] = useState(false);
 
+  const circleColor = useColorModeValue(
+    "rgba(0, 128, 128, 0.7)", // Adjust the opacity value (0.5 in this example)
+    "rgba(0, 128, 128, 0.7)"
+  );
+  const textColor = useColorModeValue("mainText", "background");
+
+  const handleMouseEnter = () => {
+    setIsHovered(true);
+  };
+
+  const handleMouseLeave = () => {
+    setIsHovered(false);
+  };
+
+  return (
+    <Circle
+      size="150px"
+      borderRadius="50% / 30% 70%"
+      bg={isHovered ? circleColor : "transparent"}
+      color={textColor}
+      display="flex"
+      alignItems="center"
+      justifyContent="center"
+      transition="background-color 0.7s ease"
+      onMouseEnter={handleMouseEnter}
+      onMouseLeave={handleMouseLeave}
+    >
+      <Button width="125px" fontSize="xl" fontWeight="bold">
+        {isHovered ? "Hovered!" : "Hover Me!"}
+      </Button>
+    </Circle>
+  );
+}
 ```
