--- a/app/mardownExamples/layout/h07.md
+++ b/app/mardownExamples/layout/h07.md
@@ -1,3 +1,77 @@
 ```javascript
+type HeroSectionProps = {
+  onClose: () => void,
+};
 
+const HeroSection = ({ onClose }: HeroSectionProps) => {
+  return (
+    <Box
+      h="100vh"
+      w="100vw"
+      bg="rgba(0, 0, 0, 0.8)"
+      display="flex"
+      alignItems="center"
+      justifyContent="center"
+      position="fixed"
+      top="0"
+      left="0"
+      zIndex="9999"
+    >
+      <Box
+        bg="accent_1"
+        color="background"
+        p="8"
+        borderRadius="md"
+        textAlign="center"
+      >
+        <Text fontSize="4xl" fontWeight="bold">
+          Welcome to I♥️Components!
+        </Text>
+        <IconButton
+          icon={<CloseIcon />}
+          colorScheme="white"
+          variant="ghost"
+          position="absolute"
+          top="1rem"
+          right="1rem"
+          onClick={onClose}
+          aria-label="Close"
+        />
+      </Box>
+      <Box
+        position="absolute"
+        bottom="2rem"
+        left="50%"
+        transform="translateX(-50%)"
+      >
+        <Button variant="outline" color="tipBackground" onClick={onClose}>
+          Close
+        </Button>
+      </Box>
+    </Box>
+  );
+};
+
+export function InteractiveHeroSection() {
+  const [showHero, setShowHero] = useState(false);
+
+  const handleButtonClick = () => {
+    setShowHero(true);
+  };
+
+  const handleClose = () => {
+    setShowHero(false);
+  };
+
+  return (
+    <Container maxW="80ch">
+      <Flex direction="column" alignItems="center">
+        <Button onClick={handleButtonClick} mt="4">
+          Show Hero Section
+        </Button>
+        {showHero && <HeroSection onClose={handleClose} />}
+      </Flex>
+    </Container>
+  );
+}
 ```
