--- a/app/mardownExamples/layout/h08.md
+++ b/app/mardownExamples/layout/h08.md
@@ -1,3 +1,65 @@
 ```javascript
+const boxDefaults = {
+  w: "100%",
+  p: 4,
+  borderRadius: "md",
+  color: "background",
+};
+export function PriceTable() {
+  return (
+    <SingleExample bg="background" paddingX={1}>
+      <Container maxW="30ch" centerContent>
+        <VStack w="100%" spacing={4}>
+          {/* Plan 1 */}
+          <Box {...boxDefaults} bg="cyan.100">
+            <Text fontSize="lg" fontWeight="bold">
+              Basic Plan
+            </Text>
+            <Text mt="2" color="gray.800">
+              Perfect for starters
+            </Text>
+            <Text mt="4" fontSize="xl" fontWeight="bold">
+              $9.99/mo
+            </Text>
+            <Button mt="4" size="sm">
+              Get Started
+            </Button>
+          </Box>
 
+          {/* Plan 2 */}
+          <Box {...boxDefaults} bg="cyan.300">
+            <Text fontSize="lg" fontWeight="bold">
+              Pro Plan
+            </Text>
+            <Text mt="2" color="gray.800">
+              Ideal for professionals
+            </Text>
+            <Text mt="4" fontSize="xl" fontWeight="bold">
+              $19.99/mo
+            </Text>
+            <Button size="sm" mt="4">
+              Get Started
+            </Button>
+          </Box>
+
+          {/* Plan 3 */}
+          <Box {...boxDefaults} bg="cyan.500">
+            <Text fontSize="lg" fontWeight="bold" textShadow="2xl">
+              Premium Plan
+            </Text>
+            <Text mt="2" color="gray.800">
+              For advanced users
+            </Text>
+            <Text mt="4" fontSize="xl" fontWeight="bold">
+              $29.99/mo
+            </Text>
+            <Button size="sm" mt="4">
+              Get Started
+            </Button>
+          </Box>
+        </VStack>
+      </Container>
+    </SingleExample>
+  );
+}
 ```
