in the middle of flex

--- a/app/mardownExamples/layout/02.md
+++ b/app/mardownExamples/layout/02.md
@@ -1,3 +1,226 @@
 ```javascript
+const SelectStyles = {
+  w: "150px",
+  size: "xs",
+};
 
+const boxDimensions = { base: "75px", sm: "100px" };
+
+/* ********************************************************************** */
+export function FlexFunctionOne() {
+  const [flexDirection, setFlexDirection] = useState<
+    "row" | "row-reverse" | "column" | "column-reverse"
+  >("row");
+  const [justifyContent, setJustifyContent] = useState<
+    | "flex-start"
+    | "flex-end"
+    | "center"
+    | "space-between"
+    | "space-around"
+    | "space-evenly"
+  >("flex-start");
+  const [alignItems, setAlignItems] = useState<
+    | "stretch"
+    | "center"
+    | "flex-start"
+    | "flex-end"
+    | "baseline"
+    | "initial"
+    | "inherit"
+  >("center");
+
+  const [containerHeight, setContainerHeight] = useState<string>("150px");
+
+  const containerHeightOptions: Array<string> = [
+    "150px",
+    "175px",
+    "200px",
+    "225px",
+    "250px",
+    "275px",
+    "300px",
+    "325px",
+    "350px",
+    "375px",
+    "400px",
+    "425px",
+    "450px",
+    "475px",
+    "500px",
+  ];
+
+  const flexDirectionOptions: Array<
+    "row" | "row-reverse" | "column" | "column-reverse"
+  > = ["row", "row-reverse", "column", "column-reverse"];
+
+  const justifyContentOptions: Array<
+    | "flex-start"
+    | "flex-end"
+    | "center"
+    | "space-between"
+    | "space-around"
+    | "space-evenly"
+  > = [
+    "flex-start",
+    "flex-end",
+    "center",
+    "space-between",
+    "space-around",
+    "space-evenly",
+  ];
+  const alignItemsOptions: Array<
+    | "stretch"
+    | "center"
+    | "flex-start"
+    | "flex-end"
+    | "baseline"
+    | "initial"
+    | "inherit"
+  > = [
+    "stretch",
+    "center",
+    "flex-start",
+    "flex-end",
+    "baseline",
+    "initial",
+    "inherit",
+  ];
+
+  return (
+    <VStack w="100%" spacing={5} alignItems="center">
+      <HStack alignItems="center">
+        <VStack alignItems="flex-end">
+          <Code>{`height=`}</Code>
+          <Code>{`flexDirection=`}</Code>
+          <Code>{`justifyContent=`}</Code>
+          <Code>{`alignItems=`}</Code>
+        </VStack>
+
+        <VStack>
+          <HStack spacing={4} w="100%">
+            <Select
+              value={containerHeight}
+              {...SelectStyles}
+              onChange={(e) => setContainerHeight(e.target.value)}
+            >
+              {containerHeightOptions.map((option) => (
+                <option key={option} value={option}>
+                  {option}
+                </option>
+              ))}
+            </Select>
+          </HStack>
+          <HStack spacing={4}>
+            <Select
+              value={flexDirection}
+              {...SelectStyles}
+              onChange={(e) =>
+                setFlexDirection(
+                  e.target.value as
+                    | "row"
+                    | "row-reverse"
+                    | "column"
+                    | "column-reverse"
+                )
+              }
+            >
+              {flexDirectionOptions.map((option) => (
+                <option key={option} value={option}>
+                  {option}
+                </option>
+              ))}
+            </Select>
+          </HStack>
+
+          <HStack spacing={4}>
+            <Select
+              {...SelectStyles}
+              value={justifyContent}
+              onChange={(e) =>
+                setJustifyContent(
+                  e.target.value as
+                    | "flex-start"
+                    | "flex-end"
+                    | "center"
+                    | "space-between"
+                    | "space-around"
+                    | "space-evenly"
+                )
+              }
+            >
+              {justifyContentOptions.map((option) => (
+                <option key={option} value={option}>
+                  {option}
+                </option>
+              ))}
+            </Select>
+          </HStack>
+
+          <HStack spacing={4}>
+            <Select
+              {...SelectStyles}
+              value={alignItems}
+              onChange={(e) =>
+                setAlignItems(
+                  e.target.value as
+                    | "stretch"
+                    | "center"
+                    | "flex-start"
+                    | "flex-end"
+                    | "baseline"
+                    | "initial"
+                    | "inherit"
+                )
+              }
+            >
+              {alignItemsOptions.map((option) => (
+                <option key={option} value={option}>
+                  {option}
+                </option>
+              ))}
+            </Select>
+          </HStack>
+        </VStack>
+      </HStack>
+
+      <Flex
+        flexDirection={flexDirection}
+        justifyContent={justifyContent}
+        alignItems={alignItems}
+        w="100%"
+        bg="sectionColor"
+        p={5}
+        color="background"
+        fontWeight="bold"
+        h="fit-content"
+        minH={containerHeight}
+      >
+        <Square
+          size={boxDimensions}
+          bg="red.200"
+          p={2}
+          border="1px solid black"
+        >
+          CHILD 1
+        </Square>
+        <Square
+          size={boxDimensions}
+          bg="green.200"
+          p={2}
+          border="1px solid black"
+        >
+          CHILD 2
+        </Square>
+        <Square
+          size={boxDimensions}
+          bg="blue.200"
+          p={2}
+          border="1px solid black"
+        >
+          CHILD 3
+        </Square>
+      </Flex>
+    </VStack>
+  );
+}
 ```
