working on flex

--- a/app/mardownExamples/layout/03.md
+++ b/app/mardownExamples/layout/03.md
@@ -1,3 +1,217 @@
 ```javascript
+export function FlexFunctionTwo() {
+  const [containerWidth, setContainerWidth] = useState < string > "100%";
+  const [box1Grow, setBox1Grow] = useState < number > 1;
+  const [box1Shrink, setBox1Shrink] = useState < number > 0;
+  const [box2Grow, setBox2Grow] = useState < number > 3;
+  const [box2Shrink, setBox2Shrink] = useState < number > 0;
+  const [box3Grow, setBox3Grow] = useState < number > 1;
+  const [box3Shrink, setBox3Shrink] = useState < number > 0;
 
+  const containerWidthOptions: Array<string> = [
+    "60%",
+    "65%",
+    "70%",
+    "75%",
+    "80%",
+    "85%",
+    "90%",
+    "95%",
+    "100%",
+  ];
+
+  const flexGrowOptions: Array<number> = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+  const flexShrinkOptions: Array<number> = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+
+  return (
+    <SingleExample bg="background">
+      <VStack spacing={2} w="100%">
+        <HStack spacing={1}>
+          <Code>{`(parent) width=`}</Code>
+
+          <Select
+            value={containerWidth}
+            {...SelectStyles}
+            w="75px"
+            onChange={(e) => setContainerWidth(e.target.value)}
+          >
+            {containerWidthOptions.map((option) => (
+              <option key={option} value={option}>
+                {option}
+              </option>
+            ))}
+          </Select>
+        </HStack>
+
+        <HStack w="100%" justify="space-around">
+          <VStack
+            spacing={1}
+            align="flex-end"
+            bg="sidebarBackground"
+            p={2}
+            borderRadius="md"
+          >
+            <Center w="100%">
+              <h3>Child 1</h3>
+            </Center>
+
+            <HStack spacing={1}>
+              <Code>{`grow=`}</Code>
+              <Select
+                value={box1Grow}
+                {...SelectStyles}
+                w="55px"
+                onChange={(e) => setBox1Grow(parseInt(e.target.value))}
+              >
+                {flexGrowOptions.map((option) => (
+                  <option key={option} value={option}>
+                    {option}
+                  </option>
+                ))}
+              </Select>
+            </HStack>
+            <HStack spacing={1}>
+              <Code>{`shrink=`}</Code>
+              <Select
+                value={box1Shrink}
+                {...SelectStyles}
+                w="55px"
+                onChange={(e) => setBox1Shrink(parseInt(e.target.value))}
+              >
+                {flexShrinkOptions.map((option) => (
+                  <option key={option} value={option}>
+                    {option}
+                  </option>
+                ))}
+              </Select>
+            </HStack>
+          </VStack>
+
+          <VStack
+            spacing={1}
+            align="flex-end"
+            bg="sidebarBackground"
+            p={2}
+            borderRadius="md"
+          >
+            <Center w="100%">
+              <h3>Child 2</h3>
+            </Center>
+            <HStack spacing={1}>
+              <Code>{`grow=`}</Code>
+              <Select
+                value={box2Grow}
+                {...SelectStyles}
+                w="55px"
+                onChange={(e) => setBox2Grow(parseInt(e.target.value))}
+              >
+                {flexGrowOptions.map((option) => (
+                  <option key={option} value={option}>
+                    {option}
+                  </option>
+                ))}
+              </Select>
+            </HStack>
+            <HStack spacing={1}>
+              <Code>{`shrink=`}</Code>
+              <Select
+                value={box2Shrink}
+                {...SelectStyles}
+                w="55px"
+                onChange={(e) => setBox2Shrink(parseInt(e.target.value))}
+              >
+                {flexShrinkOptions.map((option) => (
+                  <option key={option} value={option}>
+                    {option}
+                  </option>
+                ))}
+              </Select>
+            </HStack>
+          </VStack>
+          <VStack
+            spacing={1}
+            align="flex-end"
+            bg="sidebarBackground"
+            p={2}
+            borderRadius="md"
+          >
+            <Center w="100%">
+              <h3>Child 3</h3>
+            </Center>
+            <HStack spacing={1}>
+              <Code>{`grow=`}</Code>
+              <Select
+                value={box3Grow}
+                {...SelectStyles}
+                w="55px"
+                onChange={(e) => setBox3Grow(parseInt(e.target.value))}
+              >
+                {flexGrowOptions.map((option) => (
+                  <option key={option} value={option}>
+                    {option}
+                  </option>
+                ))}
+              </Select>
+            </HStack>
+            <HStack spacing={1}>
+              <Code>{`shrink=`}</Code>
+              <Select
+                value={box3Shrink}
+                {...SelectStyles}
+                w="55px"
+                onChange={(e) => setBox3Shrink(parseInt(e.target.value))}
+              >
+                {flexShrinkOptions.map((option) => (
+                  <option key={option} value={option}>
+                    {option}
+                  </option>
+                ))}
+              </Select>
+            </HStack>
+          </VStack>
+        </HStack>
+
+        <Flex
+          h="fit-content"
+          flexDirection="row"
+          textAlign="center"
+          p={4}
+          w={containerWidth}
+          bg="sectionColor"
+          color="background"
+          fontWeight="bold"
+          border="1px solid black"
+        >
+          <Square
+            size={boxDimensions}
+            flex={`${box1Grow} ${box1Shrink}`}
+            bg="red.200"
+            p={2}
+            border="1px solid black"
+          >
+            CHILD 1
+          </Square>
+          <Square
+            size={boxDimensions}
+            flex={`${box2Grow} ${box2Shrink}`}
+            bg="green.200"
+            p={2}
+            border="1px solid black"
+          >
+            CHILD 2
+          </Square>
+          <Square
+            size={boxDimensions}
+            flex={`${box3Grow} ${box3Shrink}`}
+            bg="blue.200"
+            p={2}
+            border="1px solid black"
+          >
+            CHILD 3
+          </Square>
+        </Flex>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
