--- a/app/mardownExamples/layout/04.md
+++ b/app/mardownExamples/layout/04.md
@@ -1,3 +1,88 @@
 ```javascript
+export function FlexFunctionThree() {
+  const [boxCount, setBoxCount] = useState(3);
+  const [flexDirection, setFlexDirection] =
+    (useState < "row") | ("column" > "row");
 
+  const handleBoxCountChange = (e: React.ChangeEvent<HTMLSelectElement>) => {
+    const count = Number(e.target.value);
+    setBoxCount(count);
+  };
+
+  const handleFlexDirectionChange = () => {
+    const newDirection = flexDirection === "row" ? "column" : "row";
+    setFlexDirection(newDirection);
+  };
+
+  const renderBoxesWithSpacers = () => {
+    const boxes = [];
+    for (let i = 1; i <= boxCount; i++) {
+      boxes.push(
+        <Fragment key={i}>
+          <Center
+            bg="accent_2"
+            p={2}
+            border="1px solid black"
+            color="background"
+            borderRadius="md"
+          >
+            Box {i}
+          </Center>
+          <Spacer />
+        </Fragment>
+      );
+    }
+    return boxes;
+  };
+
+  return (
+    <SingleExample bg="background">
+      <VStack w="100%" align="center">
+        <HStack>
+          <h3>Boxes (w/Spacers):</h3>
+          <Select
+            value={boxCount}
+            w="55px"
+            onChange={handleBoxCountChange}
+            size="sm"
+          >
+            <option value={3}>3</option>
+            <option value={4}>4</option>
+            <option value={5}>5</option>
+            <option value={6}>6</option>
+          </Select>
+        </HStack>
+        <HStack spacing={3}>
+          <HStack spacing={1}>
+            <FaArrowsAltH />
+            <Text color="accent_2" mb={0}>
+              Row
+            </Text>
+          </HStack>
+          <Switch
+            isChecked={flexDirection === "column"}
+            onChange={handleFlexDirectionChange}
+            colorScheme="gray"
+          />
+          <HStack spacing={0}>
+            <FaArrowsAltV />
+            <Text mb={0} color="accent_2">
+              Column
+            </Text>
+          </HStack>
+        </HStack>
+        <Flex
+          w="100%"
+          bg="sectionColor"
+          p={4}
+          borderRadius="md"
+          flexDirection={flexDirection}
+          h={flexDirection === "column" ? "400px" : undefined}
+        >
+          {renderBoxesWithSpacers()}
+        </Flex>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
