--- a/app/mardownExamples/layout/05.md
+++ b/app/mardownExamples/layout/05.md
@@ -1,3 +1,90 @@
 ```javascript
+export function FlexFunctionFour() {
+  const [flexItems, setFlexItems] = useState([
+    { id: 1, flexBasis: { base: "50px", sm: "100px" }, color: "blue.200" },
+    { id: 2, flexBasis: { base: "75px", sm: "150px" }, color: "green.200" },
+    { id: 3, flexBasis: { base: "60px", sm: "120px" }, color: "red.200" },
+    { id: 4, flexBasis: { base: "40px", sm: "80px" }, color: "yellow.200" },
+    { id: 5, flexBasis: { base: "100px", sm: "200px" }, color: "purple.200" },
+    { id: 6, flexBasis: { base: "65px", sm: "130px" }, color: "teal.200" },
+  ]);
 
+  const handleFlexBasisChange = (
+    e: ChangeEvent<HTMLSelectElement>,
+    id: number,
+    breakpoint: "base" | "sm"
+  ) => {
+    const { value } = e.target;
+    const updatedFlexItems = flexItems.map((item) => {
+      if (item.id === id) {
+        return {
+          ...item,
+          flexBasis: { ...item.flexBasis, [breakpoint]: value },
+        };
+      }
+      return item;
+    });
+    setFlexItems(updatedFlexItems);
+  };
+
+  return (
+    <SingleExample bg="background">
+      <VStack align="center" w="100%">
+        <VStack>
+          {flexItems.map((item) => (
+            <HStack key={item.id}>
+              <Code>{`Box ${item.id}: flexBasis=`}</Code>
+              <Select
+                key={item.id}
+                {...SelectStyles}
+                placeholder="flexBasis"
+                value={item.flexBasis.base}
+                onChange={(e) => handleFlexBasisChange(e, item.id, "base")}
+              >
+                <option value="10%">10%</option>
+                <option value="20%">20%</option>
+                <option value="30%">30%</option>
+                <option value="40%">40%</option>
+                <option value="50%">50%</option>
+                <option value="60%">60%</option>
+                <option value="70%">70%</option>
+                <option value="80%">80%</option>
+                <option value="90%">90%</option>
+                <option value="100%">100%</option>
+              </Select>
+            </HStack>
+          ))}
+        </VStack>
+
+        <Flex
+          w="100%"
+          h={{ base: "300px", sm: "450px" }}
+          flexDirection="row"
+          flexWrap="wrap"
+          p={4}
+          bg="sectionColor"
+          overflowX="auto"
+          overflowY="auto"
+          textAlign="center"
+          color="background"
+          fontWeight="bold"
+          fontSize="xl"
+        >
+          {flexItems.map((item) => (
+            <Box
+              key={item.id}
+              w={item.flexBasis.base}
+              h="100px"
+              bg={item.color}
+              m={1}
+              flexShrink={1}
+            >
+              {item.id}
+            </Box>
+          ))}
+        </Flex>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
