--- a/app/mardownExamples/layout/h10.md
+++ b/app/mardownExamples/layout/h10.md
@@ -1,3 +1,42 @@
 ```javascript
+export function FlexExampleDynamicForm() {
+  return (
+    <Flex
+      w="100%"
+      align="center"
+      justify="center"
+      flexDirection={{ base: "column", md: "row", lg: "column" }}
+    >
+      <VStack w="100%" align="center" mb={2}>
+        <FormControl w="100%" justifyContent="center">
+          <VStack w="100%">
+            <FormLabel mb={0}>Name</FormLabel>
+            <Input placeholder="John Doe" {...inputStyles} />
+          </VStack>
+        </FormControl>
+        <FormControl>
+          <VStack w="100%">
+            <FormLabel mb={0}>Email</FormLabel>
+            <Input placeholder="john@example.com" {...inputStyles} />
+          </VStack>
+        </FormControl>
+      </VStack>
 
+      <VStack w="100%" align="center" mb={2}>
+        <FormControl>
+          <VStack w="100%">
+            <FormLabel mb={0}>Password</FormLabel>
+            <Input type="password" placeholder="********" {...inputStyles} />
+          </VStack>
+        </FormControl>
+        <FormControl>
+          <VStack w="100%">
+            <FormLabel mb={0}>Confirm Password</FormLabel>
+            <Input type="password" placeholder="********" {...inputStyles} />
+          </VStack>
+        </FormControl>
+      </VStack>
+    </Flex>
+  );
+}
 ```
