--- a/app/mardownExamples/layout/h11.md
+++ b/app/mardownExamples/layout/h11.md
@@ -1,3 +1,27 @@
 ```javascript
+export function FlexExampleImageGallery() {
+  const images = [
+    "https://placebear.com/300/300",
+    "http://placekitten.com/300/300",
+    "https://place-puppy.com/300x300",
+  ];
 
+  return (
+    <Flex flexWrap="wrap" justifyContent="space-between">
+      <Center w="100%">
+        <VStack align="center">
+          {images.map((image, index) => (
+            <Image
+              key={index}
+              src={image}
+              alt={`Image ${index + 1}`}
+              boxSize="175px"
+              borderRadius="md"
+            />
+          ))}
+        </VStack>{" "}
+      </Center>
+    </Flex>
+  );
+}
 ```
