--- a/app/mardownExamples/layout/h12.md
+++ b/app/mardownExamples/layout/h12.md
@@ -1,3 +1,36 @@
 ```javascript
+export function FlexExampleNavigation() {
+  return (
+    <Flex direction="column" bg="mainText" width="175px" p={4} boxShadow="md">
+      <Box mb={4}>
+        <GiTechnoHeart size={45} color="purple" />
+      </Box>
 
+      <Flex
+        direction="column"
+        as="nav"
+        fontWeight="bold"
+        fontFamily="monospace"
+        fontSize="lg"
+      >
+        <NavItem label="Home" />
+        <NavItem label="About" />
+        <NavItem label="Services" />
+        <NavItem label="Contact" />
+      </Flex>
+    </Flex>
+  );
+}
+
+interface NavItemProps {
+  label: string;
+}
+
+function NavItem({ label }: NavItemProps) {
+  return (
+    <Text as="a" href="#" px={2} py={1}>
+      {label}
+    </Text>
+  );
+}
 ```
