--- a/app/mardownExamples/layout/06.md
+++ b/app/mardownExamples/layout/06.md
@@ -1,3 +1,121 @@
 ```javascript
+export function FlexFunctionThree() {
+  const [flexDirection, setFlexDirection] = useState<"row" | "column">(
+    "column"
+  );
 
+  const handleFlexDirectionChange = (e: ChangeEvent<HTMLSelectElement>) => {
+    setFlexDirection(e.target.value as "row" | "column");
+  };
+
+  const [flexWrap, setFlexWrap] = useState<"wrap" | "nowrap" | "wrap-reverse">(
+    "wrap"
+  );
+
+  const handleFlexWrapChange = (e: ChangeEvent<HTMLSelectElement>) => {
+    setFlexWrap(e.target.value as "wrap" | "nowrap" | "wrap-reverse");
+  };
+
+  return (
+    <SingleExample bg="background">
+      <VStack align="center" w="100%">
+        <HStack align="center">
+          <VStack align="flex-end">
+            <Code>{`flexWrap=`}</Code>
+            <Code>{`flexDirection=`}</Code>
+          </VStack>
+          <VStack>
+            <Select
+              {...SelectStyles}
+              value={flexDirection}
+              onChange={handleFlexDirectionChange}
+            >
+              <option value="row">row</option>
+              <option value="column">column</option>
+            </Select>{" "}
+            <Select
+              {...SelectStyles}
+              value={flexWrap}
+              onChange={handleFlexWrapChange}
+            >
+              <option value="nowrap">nowrap</option>
+              <option value="wrap">wrap</option>
+              <option value="wrap-reverse">wrap-reverse</option>
+            </Select>
+          </VStack>
+        </HStack>
+
+        <Flex
+          w="100%"
+          h="450px"
+          flexDirection={flexDirection}
+          flexWrap={flexWrap}
+          p={4}
+          bg="sectionColor"
+          overflowX="auto"
+          overflowY="auto"
+          textAlign="center"
+          color="background"
+          fontWeight="bold"
+          fontSize="xl"
+        >
+          <Box
+            w={{ base: "50px", sm: "100px" }}
+            h="100px"
+            bg="blue.200"
+            m={1}
+            flexShrink={1}
+          >
+            1
+          </Box>
+          <Box
+            w={{ base: "75px", sm: "150px" }}
+            h="100px"
+            bg="green.200"
+            m={1}
+            flexShrink={1}
+          >
+            2
+          </Box>
+          <Box
+            w={{ base: "60px", sm: "120px" }}
+            h="100px"
+            bg="red.200"
+            m={1}
+            flexShrink={1}
+          >
+            3
+          </Box>
+          <Box
+            w={{ base: "40px", sm: "80px" }}
+            h="100px"
+            bg="yellow.200"
+            m={1}
+            flexShrink={1}
+          >
+            4
+          </Box>
+          <Box
+            w={{ base: "100px", sm: "200px" }}
+            h="100px"
+            bg="purple.200"
+            m={1}
+            flexShrink={1}
+          >
+            5
+          </Box>
+          <Box
+            w={{ base: "65px", sm: "130px" }}
+            h="100px"
+            bg="teal.200"
+            m={1}
+            flexShrink={1}
+          >
+            6
+          </Box>
+        </Flex>
+      </VStack>
+    </SingleExample>
+  );
+}
 ```
